# sdl2-learnopengl

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  vcpkg.json
apps/: CMakeLists.txt  hellotriangle.cpp  hellowwindow.cpp  main.cpp  shaders.cpp  shaders_exo.cpp  textures.cpp  textures_exo.cpp
learnopengl/: CMakeLists.txt
learnopengl/include/: learnopengl.h  shader.h  surfaceManipulation.h
learnopengl/src/: learnopengl.cpp  shader.cpp  surfaceManipulation.cpp
resources/: multicolorTriangle.fs  multicolorTriangle_exo.fs  multicolorTriangle_exo.vs
resources/shaders/: multicolorTriangle.vs  texture.fs  textures.vs  textures_exo.fs
